# CLI_app

./: .gitignore  README.md  main.py  pyproject.toml  report.html
tests/: test_get_dict.py  test_get_status_code.py  test_main.py  test_validate_string.py
