[tool.poetry]
name = "task_cli"
version = "0.1.0"
description = ""
authors = ["Artsiom_PH <workartpharm@gmail.com>"]
readme = "README.md"
packages = [{include = "task_cli"}]

[tool.poetry.dependencies]
python = "3.11"
coverage = "6.5.0"
pytest = "7.2.0"
aiohttp = "3.8.3"
urlextract = "1.7.1"
pytest-asyncio = "^0.20.2"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
